5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1800_2565.log
== SUBMITION (2019-06-12 17:22:51) 
-- CODE:
from numpy import*
m= array(eval(input("x: ")))
p= array(eval(input("x: ")))
c= array(eval(input("x: ")))
x= array(eval(input("x: ")))
for i in range(size(m)):
	if(m[i]>=5 and p[i]>=(0.75*c))
		x[0]=x[0]+1
	elif(m[i]<5):
		x[1]=x[1]+1
	elif(p[i]<(0.75*c)):
		x[2]=x[2]+1
print(x)
-- EXECUTION TIME:
0.901214
-- ERROR:
  File "/home/codebench/codes/1800/2565/main.py", line 7
    if(m[i]>=5 and p[i]>=(0.75*c))
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 17:23:08) 
-- CODE:
from numpy import*
m= array(eval(input("x: ")))
p= array(eval(input("x: ")))
c= array(eval(input("x: ")))
x= array(eval(input("x: ")))
for i in range(size(m)):
	if(m[i]>=5 and p[i]>=(0.75*c))
		x[0]=x[0]+1
	elif(m[i]<5):
		x[1]=x[1]+1
	elif(p[i]<(0.75*c)):
		x[2]=x[2]+1
print(x)
-- EXECUTION TIME:
0.727853
-- ERROR:
  File "/home/codebench/codes/1800/2565/main.py", line 7
    if(m[i]>=5 and p[i]>=(0.75*c))
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:23:11) 
-- CODE:
from numpy import*
m= array(eval(input("x: ")))
p= array(eval(input("x: ")))
c= array(eval(input("x: ")))
x= array(eval(input("x: ")))
for i in range(size(m)):
	if(m[i]>=5 and p[i]>=(0.75*c))
		x[0]=x[0]+1
	elif(m[i]<5):
		x[1]=x[1]+1
	elif(p[i]<(0.75*c)):
		x[2]=x[2]+1
print(x)
-- ERROR:
File "XXXX", line 7
    if(m[i]>=5 and p[i]>=(0.75*c))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 17:43:34) 
-- CODE:
from numpy import*
m= array(eval(input("x: ")))
p= array(eval(input("x: ")))
c= array(eval(input("x: ")))
x=zeros(3, dtype=int)
for i in range(size(m)):
	if(m[i]>=5 and p[i]>=(0.75*c))
		x[0]=x[0]+1
	elif(m[i]<5):
		x[1]=x[1]+1
	elif(p[i]<(0.75*c)):
		x[2]=x[2]+1
print(x)
-- EXECUTION TIME:
0.847977
-- ERROR:
  File "/home/codebench/codes/1800/2565/main.py", line 7
    if(m[i]>=5 and p[i]>=(0.75*c))
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:43:37) 
-- CODE:
from numpy import*
m= array(eval(input("x: ")))
p= array(eval(input("x: ")))
c= array(eval(input("x: ")))
x=zeros(3, dtype=int)
for i in range(size(m)):
	if(m[i]>=5 and p[i]>=(0.75*c))
		x[0]=x[0]+1
	elif(m[i]<5):
		x[1]=x[1]+1
	elif(p[i]<(0.75*c)):
		x[2]=x[2]+1
print(x)
-- ERROR:
File "XXXX", line 7
    if(m[i]>=5 and p[i]>=(0.75*c))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:43:49) 
-- CODE:
from numpy import*
m= array(eval(input("x: ")))
p= array(eval(input("x: ")))
c= array(eval(input("x: ")))
x=zeros(3, dtype=int)
for i in range(size(m)):
	if(m[i]>=5 and p[i]>=(0.75*c)
		x[0]=x[0]+1
	elif(m[i]<5):
		x[1]=x[1]+1
	elif(p[i]<(0.75*c)):
		x[2]=x[2]+1
print(x)
-- ERROR:
File "XXXX", line 8
    x[0]=x[0]+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:44:02) 
-- CODE:
from numpy import*
m= array(eval(input("x: ")))
p= array(eval(input("x: ")))
c= array(eval(input("x: ")))
x=zeros(3, dtype=int)
for i in range(size(m)):
	if(m[i]>=5 and p[i]>=(0.75*c))
		x[0]=x[0]+1
	elif(m[i]<5):
		x[1]=x[1]+1
	elif(p[i]<(0.75*c)):
		x[2]=x[2]+1
print(x)
-- ERROR:
File "XXXX", line 7
    if(m[i]>=5 and p[i]>=(0.75*c))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:44:03) 
-- CODE:
from numpy import*
m= array(eval(input("x: ")))
p= array(eval(input("x: ")))
c= array(eval(input("x: ")))
x=zeros(3, dtype=int)
for i in range(size(m)):
	if(m[i]>=5 and p[i]>=(0.75*c))
		x[0]=x[0]+1
	elif(m[i]<5):
		x[1]=x[1]+1
	elif(p[i]<(0.75*c)):
		x[2]=x[2]+1
print(x)
-- ERROR:
File "XXXX", line 7
    if(m[i]>=5 and p[i]>=(0.75*c))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 17:44:04) 
-- CODE:
from numpy import*
m= array(eval(input("x: ")))
p= array(eval(input("x: ")))
c= array(eval(input("x: ")))
x=zeros(3, dtype=int)
for i in range(size(m)):
	if(m[i]>=5 and p[i]>=(0.75*c))
		x[0]=x[0]+1
	elif(m[i]<5):
		x[1]=x[1]+1
	elif(p[i]<(0.75*c)):
		x[2]=x[2]+1
print(x)
-- EXECUTION TIME:
0.875206
-- ERROR:
  File "/home/codebench/codes/1800/2565/main.py", line 7
    if(m[i]>=5 and p[i]>=(0.75*c))
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:44:13) 
-- CODE:
from numpy import*
m= array(eval(input("x: ")))
p= array(eval(input("x: ")))
c= array(eval(input("x: ")))
x=zeros(3, dtype=int)
for i in range(size(m)):
	if(m[i]>=5 and p[i]>=(0.75*c)):
		x[0]=x[0]+1
	elif(m[i]<5):
		x[1]=x[1]+1
	elif(p[i]<(0.75*c)):
		x[2]=x[2]+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 17:44:18) 
-- CODE:
from numpy import*
m= array(eval(input("x: ")))
p= array(eval(input("x: ")))
c= array(eval(input("x: ")))
x=zeros(3, dtype=int)
for i in range(size(m)):
	if(m[i]>=5 and p[i]>=(0.75*c)):
		x[0]=x[0]+1
	elif(m[i]<5):
		x[1]=x[1]+1
	elif(p[i]<(0.75*c)):
		x[2]=x[2]+1
print(x)
-- EXECUTION TIME:
1.11184
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
